# RRF

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py
src/rrf/: __init__.py  _rrf.py
